# annoying-philosophy-

./: python
annoying_philosophy/: pyproject.toml
