[project]
name = "annoying-philosophy"
version = "0.1.0"
description = ""
authors = [
    {name = "scota",email = "scota836@hsd.k12.or.us"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "annoying_philosophy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
